# tidal-extract

./: README.md  pyproject.toml
tidal_extract/: __init__.py  main.py
