[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tidal_extract"
description = 'Update monitor brightness intelligently using the DDC protocol.'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0+"
keywords = []
authors = [
  { name = "Wyatt Childers", email = "wchilders@nearce.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/DarkArc/tidal_extract#readme"
Issues = "https://github.com/DarkArc/tidal_extract/issues"
Source = "https://github.com/DarkArc/tidal_extract"

[project.scripts]
tidal-extract = "tidal_extract.main:main"

[tool.hatch.version]
path = "tidal_extract/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=tidal_extract --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "tidal_extract/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
